# biodivine-lib-logical-models

./: .gitignore  Cargo.toml  README.md  dot_output.dot  notes.md  reachability_integration_test.py  this_did_not_work_anyways
.github/workflows/: build.yml
data/: .gitignore  data_process.py  dataset.sbml  update_fn_test.sbml
data/manual/: basic_transition.sbml  handbook_example.sbml  single_var_loop.sbml  single_variable_v2.sbml  single_variable_v3.sbml
data/test-results/: 155_CONTROL-OF-TH1-TH2-TH17-TREG-DIFFERENTATION.bwd_test.txt  161_DIFFERENTIATION-OF-MONOCYTES.bwd_test.txt  190-BRAF-treatment-response.bwd_test.txt  Metabolism_demo.free-inputs.bwd_test.txt  SkinModel.free-inputs.bwd_test.txt
examples/: reachability.rs  rewritten_reachability.rs  test_reachability.rs  test_reachability_bwd.rs  test_reachability_fwd.rs
src/: expression.rs  lib.rs  output.txt  prelude.rs  symbolic_domain.rs  system.rs  test_utils.rs  utils.rs
src/_prototype/: expression.rs  smart_system_update_fn.rs  system_update_fn.rs  update_fn_bdd.rs  utils.rs
src/benchmarks/: mod.rs  reachability.rs  rewritten_reachability.rs  utils.rs
src/expression_components/: expression.rs  mod.rs  proposition.rs
src/prototype/: expression.rs  mod.rs  reachability.rs  sbml_model.rs  sbml_xml_rs.rs  smart_system_update_fn.rs  sol.rs  symbolic_domain.rs  symbolic_transition_fn.rs  system_update_fn.rs  tutorial.rs  update_fn.rs  update_fn_bdd.rs  update_fn_bdd_modular.rs  update_fn_compiled.rs  update_fn_compiled_modular.rs  utils.rs
tests/: consistency_check.rs  some_test.rs
(+10 files in other folders)
